--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # must be unique in a given SonarQube instance
 #TestAutomateBuildAfterCommit
+#TestAutomateBuildAfterPush
 sonar.projectKey=hello-world-example
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=hello-world-example
